# cgull-compiler

./: .clang-format  .gitignore  CHANGELOG.md  README.md  informal_spec.md
examples/: ex10_misc3.cgl  ex10_overloads.cgl  ex11_operations.cgl  ex12_interfaces.cgl  ex12_misc4.cgl  ex13_misc5.cgl  ex14_bool_ops_nested.cgl  ex1_dynamic_array.cgl  ex2_first_class_functions.cgl  ex2_misc1.cgl  ex3_functions.cgl  ex4_branching.cgl  ex5_looping.cgl  ex6_math_structs.cgl  ex6_structs_tuples.cgl  ex7_builtin.cgl  ex8_types_and_casting.cgl  ex9_exceptions.cgl  ex9_misc2.cgl  temp_hello_world.cgl  test.cgl
examples/invalid/: duplicate_types_ex6.cgl  lexing_ex1.cgl  mismatched_types_ex11.cgl  parsing_ex12.cgl  unresolved_types_ex3.cgl  use_before_dec_ex4.cgl
examples/invalid/extra_tests/: allocate_struct.cgl  redefinitions.cgl
src/: CMakeLists.txt  Makefile  invalid_test.sh  main.cpp  run.sh  test.sh
src/compiler/: bytecode_compiler.cpp  bytecode_compiler.h  primitive_wrapper_generator.cpp  primitive_wrapper_generator.h  semantic_analyzer.cpp  semantic_analyzer.h
src/compiler/errors/: error_reporter.cpp  error_reporter.h
src/compiler/instructions/: ir_class.cpp  ir_class.h  ir_instruction.cpp  ir_instruction.h
src/compiler/listeners/: bytecode_ir_generator_listener.cpp  bytecode_ir_generator_listener.h  collecting_error_listener.cpp  collecting_error_listener.h  default_constructor_listener.cpp  default_constructor_listener.h  special_methods_listener.cpp  special_methods_listener.h  symbol_collection_listener.cpp  symbol_collection_listener.h  type_checking_listener.cpp  type_checking_listener.h  use_before_definition_listener.cpp  use_before_definition_listener.h
src/compiler/symbols/: symbol.cpp  symbol.h  type.cpp  type.h
src/grammar/: cgull.g4
